# mcp-server-ozon-seller

./: CLAUDE.md  README.md  development.md  maintainer.md  pyproject.toml  server.json
.github/workflows/: test.yml
src/mcp_server_ozon_seller/: __init__.py  __main__.py  cli.py  models.py  ozon_api.py  server.py
tests/: conftest.py  test_analytics.py  test_barcodes.py  test_cancellations.py  test_categories.py  test_certificates.py  test_chats.py  test_fbo.py  test_fbs_postings.py  test_finance.py  test_labels.py  test_models.py  test_orders.py  test_products.py  test_promotions.py  test_questions.py  test_rating.py  test_reports.py  test_returns.py  test_reviews.py  test_ship.py  test_warehouses.py
