[project]
name = "mcp-server-ozon-seller"
version = "1.0.0"
description = "MCP server for Ozon Seller API — products, orders, FBS/FBO, finance, analytics, returns, chats, promotions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28",
    "pydantic>=2.0",
]

[project.scripts]
mcp-server-ozon-seller = "mcp_server_ozon_seller:main"
ozon-seller-cli = "mcp_server_ozon_seller.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_ozon_seller"]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.21", "anyio>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
